[package]
name = "poe-api"
version = "0.1.0"
authors = ["dav1d"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.22"
thiserror = "1"

# Optional for client
reqwest = { version = "0.11", default-features = false, features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
clap = { version = "3", features = ["derive"] }
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["std-future", "futures-03"] }
tracing-subscriber = "0.2"
human_format = "1.0"

[features]
default = ["client", "native-tls"]

client = ["reqwest"]

native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]

[[example]]
name = "poe-cli"

[[example]]
name = "poe-ladder"
