[package]
name = "poe-api"
version = "0.1.0"
authors = ["dav1d"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Optional for client
tokio = { version = "1.0", features = ["time"], optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json"], optional = true }
futures = { version = "0.3.22", optional = true }
thiserror = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
clap = { version = "3", features = ["derive"] }
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["std-future", "futures-03"] }
tracing-subscriber = "0.2"
human_format = "1.0"

[features]
default = ["client", "native-tls"]

client = ["reqwest", "tokio", "futures", "thiserror"]

native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]

[[example]]
name = "poe-cli"

[[example]]
name = "poe-ladder"
