[package]
name = "poe-api"
version = "0.1.0"
authors = ["dav1d"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.2"
