[package]
name = "poe-cli"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poe-api = { path = "../poe-api" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = "3.0.0-beta.2"
serde_json = { version = "1.0" }
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["std-future", "futures-03"] }
tracing-subscriber = "0.2"
